--- a/config/dev.env
+++ b/config/dev.env
@@ -1,1 +1,2 @@
-PORT=8080
+PORT=3000
+MONGODB_URL=mongodb+srv://jackielyn_benitez:Kcaj725123@mycluster.mhydu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
