--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "diary",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "env-cmd -f ./config/dev.env nodemon app.js"
